# kit_fundador

./: .env.example  .eslintrc.json  .gitignore  .markdownlintignore  ANALISIS_DEPENDABOT_PRS.md  BUGFIX-E2E-001-HANDOFF.md  CLAUDE.md  Dockerfile.dev  GEMINI.md  Makefile  PLAN_EJECUCION_DEPENDABOT.md  QUICK_START.md  README.md  SECURITY_AUDIT_REPORT.md  TASK-005-PROGRESS.md  docker-compose.dev.yml  jest.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.scripts.json  tsconfig.test.json
.claude/: settings.local.json
.context/: active-context.md  decision-log.json  project-state.json  task-005-phase-2-context.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
.husky/: pre-commit
config/: tech-stack.json
config/rules/: ai-guardrails.json
db/migrations/: 000000000000__bootstrap.sql  README.md
dev-docs/: README_FULL.md  TASK-005-PROGRESS.md  VALIDATION-REPORT-TASK-005-PHASE-2.md  ci-analysis.md  consumer-checklist.md  context.md  plan.md  post-adaptation-validation.md  task.md  tech-stack-decisions.md  tooling-guide.md
dev-docs/ADR/: ADR_INDEX.md
dev-docs/agent-profiles/: EJECUTOR.md  PROMPTS.md  VALIDADOR.md
dev-docs/application/: use-case-blueprint.md
dev-docs/domain/: invariants.md  ubiquitous-language.md
dev-docs/handoffs/: HANDOFF-TASK-005-PHASE-1.md  HANDOFF-TASK-005-PHASE-2.md  MISSION-TASK-005-PHASE-3.md  PR-CHECKLIST-PHASE-2-PREPARATION.md
dev-docs/infrastructure/: database-blueprint.md
dev-docs/known-limitations/: JSON-Parsing-Limitation.md
dev-docs/prompt_example/: QUICK_REFERENCE.md  README.md
dev-docs/reports/: ANALYSIS_REPORT.md  GEMINI.md  PHASE_2_COMPLETION_REPORT.md  VALIDADOR_COMPLETE_ANALYSIS.md  VALIDADOR_COMPLETION_REPORT.md
dev-docs/setup/: setup-sh-remediation-plan.md  setup-sh-remediation-report.md
dev-docs/testing/: testing-quality-assurance-tool.md
dev-docs/user-dd/: post-adaptation-validation.md  tech-stack-decisions.md
document/: AUDITORIA_SETUP_SH.md  MIGRATION.md
document/informes_CC/: AUDITORIA_SETUP_SH.md  AUDITORIA_TDD_DDD.md  INFORME_MEJORAS_SIN_SOBREINGENIERIA.md  PLAN_EJECUCION_DEPENDABOT.md  kit-fundador-research-3.0.md
document/test_CR/: TESTS_GENERATED.md  TEST_SUMMARY.md
document/validacion/: README.md
local-packages/dotenv/: LICENSE  index.d.ts  index.js  package.json
scripts/: migrate.js  migrate.js.map  migrate.ts  seed.d.ts  seed.d.ts.map  seed.js  seed.js.map  seed.ts  setup.sh  validate-architecture.sh
src/: index.ts
src/infrastructure/: server.ts
src/types/: bcrypt.d.ts
templates/python/: README.md  pyproject.toml  requirements.txt
templates/python/src/: __init__.py
templates/python/src/domain/entities/: user.py
templates/python/src/domain/value_objects/: email.py
templates/python/tests/unit/: test_email.py  test_user.py
templates/typescript/: README.md  package.json  tsconfig.json
tests/e2e/: user-registration-simple.e2e.test.ts  user-registration.e2e.test.ts
tests/helpers/: openapi-validator.ts
tests/integration/: test_setup_script.sh
tests/setup/: setup_script.test.sh
tests/unit/: Email.test.d.ts  Email.test.d.ts.map  Email.test.js  Email.test.js.map  Email.test.ts  Password.test.ts  User.test.d.ts  User.test.d.ts.map  User.test.js  User.test.js.map  User.test.ts
types/: pg.d.ts
web/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+97 files in other folders)
